2003-08-09  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCustomView.m: Corrected obsolete header reference.
	* GormInspectorsManager.m: Removed extra establishConnection call
	which was causing a problem when removing connections from
	NSOwner.

2003-08-04  Fabien Vallon  <fabien@tuxfamily>

	* Add a good when adding Images

2003-08-04  Fabien Vallon  <fabien@tuxfamily.org>

	* GormImageEditor.m : Fix dnd (Todo : accept NSTIFFPboardType)
	(code borrow from Terminal.app by Alexander Malmberg)
	

2003-08-01  Fabien Vallon  <fabien@uxfamily.org>

	* GormDocument.m : Add offset when pasting
	* Gorm.m : clean up & add some comment
	* GormPrivate.h : clean up 

2003-07-31  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.h: Point #include at the new location for
	private headers.
	* GModelDecoder.h: Ditto.

2003-07-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.3.0

2003-07-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menu/GormNSMenu.m: Added category to access
	private member of NSResponder, which is needed by
	the menu editor.
	* Palettes/0Menu/GormMenuEditor.m: same as above.

2003-07-20  Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile.postamble: Added to help with one-pass compile.
	* GNUmakefile.preamble: Added ADDITIONAL_LIB_DIR so that Gorm
	can be compiled in one pass.  Corrects bug #3748.
	
2003-07-20  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageInspector.[hm]: Added.  Implements image inspector.
	* Resources/GormImageInspector.gorm: Added interface file.

2003-07-20  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: (-[GormDocument saveGormDocument:]) added
	code to prevent copying of images/sounds if the source path
	is the same as the destination.  This was causing the file
	to be truncated to zero and caused Gorm to lock.
	* (-[GormDocument parseHeader:]): removed 
	extra characterset definition/
	